#![feature(integer_sign_cast)]
[package]
name = "learning_ffmpeg"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { version = "7.1.0", features = ["codec"] }
num = "0.4.3"
rand = "0.9.2"
sdl3 = { version = "0.14.40", features = ["build-from-source-static", "static-link", "unsafe_textures", "use-vcpkg"] }
sdl3-sys = "0.5.4"
vcpkg = "0.2.15"
